fixed tooltip not scaling on mobile

--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ section {
 }
 
 #cursorTooltip {
+  transform-origin: top left;
   position: fixed;
   z-index: 40;
 }
